# PicoApple2

./: .gitignore  Apple2Core.h  Apple2Keyboard.html  DevLog.md  DevLog_Entry_2026-03-27.md  DevLog_Entry_2026-03-28.md  DevLog_Entry_2026-03-29.md  DevLog_Entry_2026-03-30.md  GEMINI.md  PROGRESS.md  PROJECT_MAP.md  PicoApple2.ino  QA_CHECKLIST.md  README.md  RECOVERY_NOTE_2026-03-29.md  TFT_DMA.cpp  TFT_DMA.h  build_env.bat  build_rust.bat  check_env.bat  cpp_port_attic  full_build.bat  ili9341_spi.pio  ili9341_spi.pio.h  library.properties  pico_apple2_emulator.ino  platform.local.txt  precompile_sd.bat  serial_monitor.ps1  terminal.bat  test_sd.bat
apple2_core/: Cargo.toml  build_error.txt
apple2_core/src/: boot_test.rs  cpu.rs  disk2.rs  lib.rs  machine.rs  memory.rs  nibble.rs  video.rs
docs/: DiskWrite_Technical_Report.md  Disk_Emulation_Architecture_Notes.md
scripts/: scan_env.ps1
sd_test/: sd_test.ino
src/: Apple2Core.h
