[package]
name = "apple2-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]
# no_std crate 無法在主機端建置 doctest 用的 unwind 版本
doctest = false

[dependencies]
embedded-alloc = "0.6.0"
critical-section = { version = "1.1", features = ["restore-state-u8"] }

# no_std 不支援 unwind；test profile 會自動忽略此設定，因此 cargo test 仍可在主機端執行
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# 嵌入式效能：全程式 LTO + 單一 codegen unit 讓 mem.read/write 等
# 每條指令呼叫多次的小函式能跨模組 inline
lto = "fat"
codegen-units = 1
opt-level = 3
